--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
 <body background="red">
 <h1 style="font-family:Comic Sans Ms ;text-align="center";font-siza:20pt;color:"pink";>
 LOGIN PAGE </h1>
-<form name="My Form"action="Login">
+<form name="My Form">
 User Name  <input type="text"name="username">
 <br><br>Password    <input type="password"name="password">
 <br><br>
